--- a/Projects/3.3-gp/3.3-gp.css
+++ b/Projects/3.3-gp/3.3-gp.css
@@ -1,76 +1,123 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
+/* CSS Reset
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
     margin: 0;
-    max-width: 100%;
-    /* put a border around everything to see where it stops and starts */
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
-  
-  /* General Styles */
-html {
-    font-size: 62.5%;
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
 }
 
 body {
-    font-family: "PT Sans", sans-serif;
-    font-size: 1.8rem;
-    line-height: 1.5;
-    color: #4f4f4f;
-    background-color: #fffafa;
+    line-height: 1;
 }
 
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+* {
+box-sizing: border-box;
+padding: 0;
+margin: 0;
+max-width: 100%;
+/*put a border around everything to see where it stops and starts*/
+/*     border:1px solid grey; */
+}
+
+/*General Styles*/
+html {
+font-size: 62.5%;
+}
+body {
+font-size: 1.8rem;
+line-height: 1.5;
+color: #4f4f4f;
+font-family: "PT Sans", sans-serif;
+background-color: #fffafa;
+}
 h1,
 h2,
 h3,
 h4 {
-    font-family: "Nunito", sans-serif;
-    letter-spacing: 3px;
-    text-align: center;
+letter-spacing: 3px;
+font-family: "Nunito", sans-serif;
+text-align: center;
 }
-
 h1 {
-    font-size: 5rem;
-    color: #000;
+font-size: 5rem;
 }
-
 h2 {
-    font-size: 3rem;
+font-size: 3rem;
 }
-
 h3 {
-    font-size: 2.5rem;
+font-size: 2.5rem;
 }
-
 section {
-    padding: 4% 0;
+padding: 4% 0;
 }
-
 a {
-    font-family: "PT Sans", sans-serif;
-    text-decoration: none;
-    letter-spacing: 3px;
-    color: #4f4f4f;
+text-decoration: none;
+letter-spacing: 3px;
+color: #4f4f4f;
+font-family: "PT Sans", sans-serif;
 }
-
 a:hover {
-    color: #fcb131;
+color: #fcb131;
 }
-
 i {
-    font-size: 5rem;
+font-size: 5rem;
 }
 
-/* Header Section Styles */
+/*header section styles*/
 header nav {
-    width: 100%;
-    height: 10vh;
-    z-index: 999;
     position: fixed;
     top: 0;
+    width: 100%;
+    height: 10vh;
     background-color: rgba(255, 255, 255, 0.8);
+    z-index: 999;
+    /* Flex Properties */
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .logo {
@@ -88,40 +135,34 @@ header nav {
 /*Top Section Styles*/
 #top {
     height: 85vh;
-    margin-top: 6%;
     background-image: url("https://github.com/BrityHemming/farm-to-table-practice-project/blob/solution/farm-to-table/images/header.jpg?raw=true");
+    margin-top: 5%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-#top h2 {
-    color: #000;
-}
-
-/* Farm Section Styles */
+/*Farm Section Styles*/
 .container {
     margin-top: 5%;
+    display: flex;
+    justify-content: space-around;
 }
-/* make the boxes line up beside eachother with space around them */
+
 .box {
+    width: 20%;
     border: 3px solid #4f4f4f;
     text-align: center;
     padding: 4%;
     background-color: #fff;
-    display: inline-block;
-    width: 20%;
-    margin: 0 2.25%;
 }
 
 .box h3 {
     margin: 15% 0;
 }
 
-/* Blank Section Styles */
+/*blank section styles*/
+
 .hero-image {
     height: 40vh;
     background-image: url("https://github.com/BrityHemming/farm-to-table-practice-project/blob/solution/farm-to-table/images/dirt.jpg?raw=true");
@@ -131,34 +172,40 @@ header nav {
     background-repeat: no-repeat;
 }
 
-/* About Section Styles */
-/* make the box of text centered with some space along the sides */
+/*About Section Styles*/
+#about {
+    display: flex;
+    justify-content: center;
+}
+
 .text {
     width: 60%;
-    text-align: center;
     border: 3px solid #4f4f4f;
     background-color: #fff;
-    margin: 0 auto;
+    text-align: center;
+    padding: 4%;
 }
 
 .text p {
-    text-align: center;
-    padding: 5%;
+    text-align: left;
 }
 
-/* Gallery Section Styles */
+/*Gallery Section Styles*/
+
 .gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-content: space-around;
 }
 
 .gallery div {
+    width: 40%;
+    height: 40vh;
+    margin: 4% 0;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    display: flex;
-    align-items: flex-end;
 }
 
 .gallery div .hide {
@@ -192,19 +239,21 @@ header nav {
     background-image: url("https://github.com/BrityHemming/farm-to-table-practice-project/blob/solution/farm-to-table/images/sheep.jpg?raw=true");
 }
 
-/* Contact Section Styles */
+/*Contact Section Styles*/
 #contact {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 #contact h2 {
     width: 100%;
 }
 
-/* get the left and right side by side */
 .left,
 .right {
+    width: 50%;
+    padding: 4% 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -223,13 +272,15 @@ header nav {
     width: 70%;
 }
 
-/* Footer Section Styles */
+/*Footer Section Styles*/
+
 footer {
-    padding: 2% 0;
-    color: #fff;
     background-color: #fcb131;
+    color: #fff;
+    padding: 2% 0;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 footer a {
@@ -251,14 +302,14 @@ nav.social {
 }
 
 nav.main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 nav.main a {
     margin: 2% 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .copyright {
@@ -267,16 +318,19 @@ nav.main a {
     align-items: flex-end;
 }
 
-/* Media Queries */
-/* Tablet */
+/*Media Queries*/
+/*Tablet*/
 @media (max-width: 800px) {
 .links {
     width: 70%;
 }
+#about .text {
+    width: 80%;
+}
 .gallery div .hide {
-    width: 70%;
     background-color: #fff;
     display: block;
+    width: 70%;
 }
 .gallery div .hide h2 {
     font-size: 2.2rem;
@@ -298,8 +352,8 @@ nav.main a {
 /*phone*/
 @media (max-width: 500px) {
 header nav {
-    height: 18vh;
     flex-direction: column;
+    height: 18vh;
 }
 .links {
     width: 100%;
@@ -352,4 +406,4 @@ footer div {
 .copyright {
     justify-content: flex-start;
 }
-}
+} */
